# wallpaper-cava

./: .gitmodules  Cargo.toml  LICENSE.md  README.MD  README.md  config.toml
src/: app_config.rs  cli_help.rs  main.rs
src/shaders/: fragment_shader.glsl  vertex_shader.glsl
